# demo-app

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml
tests/: test_demo_page.py
