[tool.poetry]
name = "demo-page"
version = "0.1.0"
description = ""
authors = ["Evgenii Smirnov <jekka9803@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
streamlit-lottie = "^0.0.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
